# tb3_auto_explore

./: found_cubes.txt  my_map.pgm  my_map.yaml  package.xml  setup.cfg  setup.py
config/: nav2_params.yaml  slam_toolbox_loopsafe.yaml
experiment/: frontier_explorer(feelgood).py  frontier_explorer(feelgood2).py  frontier_explorer(valid완화하다 실패).py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/tb3_auto_explore/lib/tb3_auto_explore/: explore_game2  frontier_explorer  initial_pose_from_file
install/tb3_auto_explore/share/tb3_auto_explore/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tb3_auto_explore/share/tb3_auto_explore/config/: blank.yaml  ekf.yaml  nav2.yaml  nav2_explore_tune.yaml  nav2_params.yaml  slam_toolbox.yaml  slam_toolbox_loopsafe.yaml
install/tb3_auto_explore/share/tb3_auto_explore/launch/: explore_bringup.launch.py
install/tb3_auto_explore/share/tb3_auto_explore/map/: mission_map.pgm  mission_map.yaml  start_pose.txt
install/tb3_auto_explore/share/tb3_auto_explore/param/: burger.yaml  slam_toolbox.yaml
launch/: explore_bringup.launch.py  explore_game2.launch.py
log/: latest_build
map/: found_cubes.csv  mission_map.pgm  mission_map.yaml
map/1/: mission_map.pgm  mission_map.yaml
original/: dd.py  frontier_explorer (1).py  frontier_explorer.py  frontier_explorer_11_06.py
param/: burger.yaml
tb3_auto_explore/: explore_game2.py  frontier_explorer.py
yolo/: image_topic.py
